fix text size for about header on mobile

--- a/src/components/About/styles.css
+++ b/src/components/About/styles.css
@@ -3,3 +3,9 @@
 	padding-top: 16px;
 	color: white;
 }
+
+@media (max-width: 575.98px) {
+	.aboutText h1{
+		font-size: 2.5rem;
+	}
+}
